# merchant_automation

./: .env.example  .gitattributes  .gitignore  CLI_COMMANDS_TEST_REPORT.md  README.md  pyproject.toml  test_cli_commands.py  test_recipe_flow.py
docs/: PLAN-project-optimization-roadmap.md  PLAN-recipe-flywheel.md  PRD-recipe-flywheel.md  implementation-summary.md  project-structure-agent-comparison.html
docs/superpowers/specs/: 2026-06-08-adaptive-prepare-recovery-design.md
src/merchant_automation/: __init__.py  config.py  explore.py  server.py
src/merchant_automation/accounts/: __init__.py  manager.py  (+3 more)
tests/: test_account_store.py  test_agent_explorer.py  test_dashboard_routes.py  test_e2e_feishu.py  test_execution_router.py  test_execution_traces.py  test_failure_analyzer.py  test_feishu_bot_cards.py  test_feishu_command_routing.py  test_feishu_interactions.py  test_feishu_presenter.py  test_feishu_resource_downloader.py  test_image_attachment_flow.py  test_image_upload_e2e.py  test_job_binding.py  test_job_planner.py  test_login_flow.py  test_operation_catalog.py  test_operation_parser.py  test_operation_planning_service.py  test_operation_schemas.py  test_operation_storage.py  test_operation_storage_traces.py  test_planning_schemas.py  test_preflight.py  test_prepare_evidence.py  test_project_independence.py  test_real_backend_explore_runner.py  test_recipe_definition.py  test_recipe_executor.py  test_recipe_registry.py  test_recipe_store.py  test_recipe_synthesizer.py  test_server_lifespan.py  test_task_pool_account_lock.py  test_task_queue_attachments.py
(+33 files in other folders)
